Bug 477010 - Pop up Window fails to show up in Konqueror
Summary: Pop up Window fails to show up in Konqueror
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: kjs (other bugs)
Version First Reported In: 23.08.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-14 19:06 UTC by Klaus-Dieter Fietze
Modified: 2024-03-24 09:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Konqueor Java & JavaScript settings (79.14 KB, image/png)
2023-11-14 19:06 UTC, Klaus-Dieter Fietze
Details
System Journal with lines related to Koqueror pop-up window (1.91 KB, text/plain)
2024-03-05 20:42 UTC, Klaus-Dieter Fietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Klaus-Dieter Fietze 2023-11-14 19:06:53 UTC
Created attachment 163160 [details]
Konqueor Java & JavaScript settings

SUMMARY
***
Pop-up Window not shown
***


STEPS TO REPRODUCE
1. Open Konqueror's browser function using WebEngine
2. Navigate to the website  https://www.10881.ch/
3. Click the Login button at the upper right corner of the page

OBSERVED RESULT
Nothing happens !

EXPECTED RESULT
 In other browsers, like Falkon or Firefox, a window will pop up requesting the login credentials.
Konqueror behaves differently, depending on its Java Script settings.
> If you tick one of the options "Allow", "Deny" or "Smart" nothing will happen.
> If you choose "Ask" Konqueror will ask you, whether it should open a window with the indicated url. No matter what you choose, nothing will happen.
> However, if you copy the displayed url into a new browser window or browser tab, it will open. 

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20231108
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11
Kernel Version: 6.5.9-1-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-7700T CPU @ 2.90GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 630

ADDITIONAL INFORMATION
Please refer to the attached Java & JavaScript settings.
It is my guess that it has to with these settings but it may another reason.
Comment 1 Klaus-Dieter Fietze 2024-03-05 20:40:13 UTC
In order to bring some more light into this matter, I recently went through the System Journal and looked for entries related to Konqueror (see attached text file). I found a line that says:
“Wayland does not support Qwindow::requestActivate()”
So, I switched my desktop session from Plasma (Wayland) to Plasma (X11). Running the X Window System, Konqueror did what it was supposed to do – the requested window opened. It looks like there is a problem with the Qt implementation in Wayland.
Comment 2 Klaus-Dieter Fietze 2024-03-05 20:42:08 UTC
Created attachment 166440 [details]
System Journal with lines related to Koqueror pop-up window
Comment 3 Bug Janitor Service 2024-03-15 18:19:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/313
Comment 4 Stefano Crocco 2024-03-24 08:59:27 UTC
Git commit 6386a41306dcd223ade34358b6e656f6a7213593 by Stefano Crocco.
Committed on 24/03/2024 at 08:50.
Pushed by stefanocrocco into branch 'master'.

Ensure that popup windows are shown on Wayland

M  +37   -29   src/konqmainwindow.cpp
M  +9    -0    src/konqmainwindow.h

https://invent.kde.org/network/konqueror/-/commit/6386a41306dcd223ade34358b6e656f6a7213593
Comment 5 Stefano Crocco 2024-03-24 09:11:46 UTC
Git commit 69814a239ce50473bd01d5ceca4c99a9e8681704 by Stefano Crocco.
Committed on 24/03/2024 at 09:11.
Pushed by stefanocrocco into branch 'release/24.02'.

Ensure that popup windows are shown on Wayland


(cherry picked from commit 6386a41306dcd223ade34358b6e656f6a7213593)

6386a413 Ensure that popup windows are shown on Wayland

M  +37   -29   src/konqmainwindow.cpp
M  +9    -0    src/konqmainwindow.h

https://invent.kde.org/network/konqueror/-/commit/69814a239ce50473bd01d5ceca4c99a9e8681704