Ensure that popup windows are shown on Wayland

BUG: 477010